[package]
name = "machine_learning"
version = "0.1.0"
edition = "2021"
authors = ["Isaka James https://linkedin.com/in/isaka-james"]
description = "A Rust library for machine learning algorithms"
license = "MIT"
repository = "https://github.com/isaka-james/machine-learning"
documentation = "https://isaka-james.github.io/ml-docs/"
homepage = "https://github.com/isaka-james/machine-learning"
keywords = ["machine-learning", "rust","algorithms","machine_learning"]
categories = ["science", "mathematics", "algorithms]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
